# course_work_4.1

./: .gitignore  0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  README.md  creepy.json  get_json.py  main.py  pyproject.toml  tetstrtsr.py  text.json  utils.py  vacancies.py  Москва2023-07-26 01:46:26.821401.json
src/: get_json.py  utils.py  vacancies.py
