[tool.poetry]
name = "course-work-4-1"
version = "0.1.0"
description = "Course Work 4"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
